--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -5011,14 +5011,14 @@
                 }
             ],
             "description": "Patch is needed in order for tdx/thread_director to merge",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Kyle Pelton",
                     "email": "kyle.d.pelton@intel.com"
                 }
             ],
-            "jira": "",
+            "jira": "NEXT-3406",
             "name": "thread_director_kvm_tdx_fixup",
             "repourl": "https://github.com/intel-sandbox/otc_power_kernel",
             "sdl_contact": [
@@ -5029,7 +5029,7 @@
             ],
             "status": "intel confidential",
             "stuck_at_ref": "",
-            "last_enabled": "v6.3",
+            "last_enabled": "v6.4",
             "maillist": "",
             "platforms": "",
             "feature_jiras": ""
