--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -5946,6 +5946,45 @@
             "platforms": "EMR,GNR,SPR",
             "feature_jiras": "",
             "last_enabled": "v6.4"
+        },
+        {
+            "branch": "tdx-compliance-for-inext",
+            "branch_type": "expiring",
+            "config_options": [
+                {
+                    "name": "CONFIG_INTEL_TDX_COMPLIANCE",
+                    "value": "m"
+                }
+            ],
+            "contributor": [
+                {
+                    "name": "Yi Sun",
+                    "email": "yi.sun@linux.intel.com"
+                }
+            ],
+            "description": "TDX compliance is designed to verify TDX environment.",
+            "enabled": true,
+            "ip_owner": [
+                {
+                    "name": "Yi Sun",
+                    "email": "yi.sun@linux.intel.com"
+                }
+            ],
+            "jira": "NEXT-3407",
+            "name": "tdx_compliance",
+            "repourl": "https://github.com/intel-sandbox/linux-sy.git",
+            "sdl_contact": [
+                {
+                    "name": "Yi Sun",
+                    "email": "yi.sun@linux.intel.com"
+                }
+            ],
+            "status": "public",
+            "stuck_at_ref": "",
+            "maillist": "https://eclists.intel.com/sympa/arc/intel-next/2023-05/msg00071.html",
+            "platforms": "EMR,GNR,SPR",
+            "feature_jiras": "",
+            "last_enabled": "v6.4"
         }
     ]
 }
