--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -4158,7 +4158,7 @@
                 }
             ],
             "description": "TDX KVM support",
-            "enabled": true,
+            "enabled": false,
             "ip_owner": [
                 {
                     "name": "Isaku Yamahata",
@@ -4973,7 +4973,7 @@
                 }
             ],
             "description": "Enable Intel Thread Director (ITD) in virtualization scenario",
-            "enabled": true,
+            "enabled": false,
             "ip_owner": [
                 {
                     "name": "Eliezer Weissmann",
@@ -5011,7 +5011,7 @@
                 }
             ],
             "description": "Patch is needed in order for tdx/thread_director to merge",
-            "enabled": true,
+            "enabled": false,
             "ip_owner": [
                 {
                     "name": "Kyle Pelton",
