manifest_in.json: Fix contributor

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -5992,11 +5992,7 @@
             "config_options": [],
             "contributor": [
                 {
-                    "name": "S",
-                    "email": "S"
-                },
-                {
-                    "name": " Tao",
+                    "name": "Tao su",
                     "email": "tao1.su@intel.com"
                 }
             ],
